Wrong user counting with ID properties in pynodes #61506

Closed
opened 2019-02-13 12:36:02 +01:00 by Jacques Lucke · 9 comments
Member

Blender Version
Broken: 57f0b175d7

Short description of error
When a custom node has an idprop of type ID, then the user count is not increased when the node is copied.

Exact steps for others to reproduce the error

  1. Execute the script.
  2. Select an object in the node.
  3. Duplicate that node and observe that the user count of the object does not increase (in the outliner).
lang=python
import bpy
from bpy.props import PointerProperty

class MyTreeType(bpy.types.NodeTree):
    bl_idname = "MyTreeType"
    bl_label = "My Tree Type"
    bl_icon = "NONE"
    
    
class MyNodeType(bpy.types.Node):
    bl_idname = "MyNodeType"
    bl_label = "My Node Type"

    object: PointerProperty(type=bpy.types.Object)
    
    def draw_buttons(self, context, layout):
        layout.prop(self, "object", text="")

    
bpy.utils.register_class(MyTreeType)
bpy.utils.register_class(MyNodeType)

tree = bpy.data.node_groups.new("Test Tree", "MyTreeType")
tree.nodes.new("MyNodeType")

bpy.context.area.type = "NODE_EDITOR"
bpy.context.space_data.tree_type = "MyTreeType"
bpy.context.space_data.node_tree = tree

Initial investigation

This is caused by the fact that nodeCopyNode passes LIB_ID_CREATE_NO_USER_REFCOUNT into BKE_node_copy_ex.
I suspect this is the case because the node should store a "weak" pointer to the node tree.
However, the same flag is used to copy the idprops, resulting in wrong behavior.

Are there cases when node->id should not be a weak pointer?
If not, then we should just get rid of

if ((flag & LIB_ID_CREATE_NO_USER_REFCOUNT) == 0) {
	id_us_plus(node_dst->id);
}

in BKE_node_copy_ex and don't use the flag at all.

Another related issue is that when the scene is unloaded, the object referenced by the idprop is freed, before the node is freed.
So, when the node is freed, it tries to decrement the user count of the object -> crash.
Not sure what's the best way to fix this. Usually the reference to the object should be removed from the idprop, when the object is removed, right?

**Blender Version** Broken: 57f0b175d7 **Short description of error** When a custom node has an idprop of type ID, then the user count is not increased when the node is copied. **Exact steps for others to reproduce the error** 1. Execute the script. 2. Select an object in the node. 3. Duplicate that node and observe that the user count of the object does not increase (in the outliner). ``` lang=python import bpy from bpy.props import PointerProperty class MyTreeType(bpy.types.NodeTree): bl_idname = "MyTreeType" bl_label = "My Tree Type" bl_icon = "NONE" class MyNodeType(bpy.types.Node): bl_idname = "MyNodeType" bl_label = "My Node Type" object: PointerProperty(type=bpy.types.Object) def draw_buttons(self, context, layout): layout.prop(self, "object", text="") bpy.utils.register_class(MyTreeType) bpy.utils.register_class(MyNodeType) tree = bpy.data.node_groups.new("Test Tree", "MyTreeType") tree.nodes.new("MyNodeType") bpy.context.area.type = "NODE_EDITOR" bpy.context.space_data.tree_type = "MyTreeType" bpy.context.space_data.node_tree = tree ``` **Initial investigation** This is caused by the fact that `nodeCopyNode` passes `LIB_ID_CREATE_NO_USER_REFCOUNT` into `BKE_node_copy_ex`. I suspect this is the case because the node should store a "weak" pointer to the node tree. However, the same flag is used to copy the idprops, resulting in wrong behavior. Are there cases when `node->id` should not be a weak pointer? If not, then we should just get rid of ``` if ((flag & LIB_ID_CREATE_NO_USER_REFCOUNT) == 0) { id_us_plus(node_dst->id); } ``` in `BKE_node_copy_ex` and don't use the flag at all. Another related issue is that when the scene is unloaded, the object referenced by the idprop is freed, before the node is freed. So, when the node is freed, it tries to decrement the user count of the object -> crash. Not sure what's the best way to fix this. Usually the reference to the object should be removed from the idprop, when the object is removed, right?
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29
Author
Member

@mont29, I can also fix this, but could you give me a hint on what behavior is expected?

@mont29, I can also fix this, but could you give me a hint on what behavior is expected?
Bastien Montagne self-assigned this 2019-02-13 14:38:43 +01:00

@JacquesLucke Will do this, Node code is a real nightmare when it comes to ID management, with all its weird specific types of copying processes… :(

@JacquesLucke Will do this, Node code is a real nightmare when it comes to ID management, with all its weird specific types of copying processes… :(

This issue was referenced by c6e3a20ab6

This issue was referenced by c6e3a20ab60ba8fb56886913a5c7a4269d45b4c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks for the quick fix. Unfortunately, there is still the freeing issue.
Not sure how related this is.

To reproduce:

  1. Run the script from above.
  2. Select the camera in the the node.
  3. File -> New -> General.
Thanks for the quick fix. Unfortunately, there is still the freeing issue. Not sure how related this is. To reproduce: 1. Run the script from above. 2. Select the camera in the the node. 3. `File -> New -> General`.

Eeeeeeh! What do we say about reporting several issues in same report? xD

Eeeeeeh! What do we say about reporting several issues in same report? xD
Author
Member

right, w8.

right, w8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61506
No description provided.